# hdbind-3D

./: .gitignore  config.py  pyproject.toml  requirements.txt
scripts/: 00_data_prep.py  01a_run_plif.py  01b_run_plec.py  01c_run_grim.py  02a_run_pocket_feat.py  02b_run_distances.py  02c_run_dist_chem.py  03_compare_tiers.py  04_eval_decoy_sets.py  05_decoy_comparison_report.py  06_build_egnn_dataset.py  06b_build_mixed_lmdb.py  07_train_egnn.py  10_bias_controls.py  11_eval_goldilocks.py  12_verify_plec_groupkfold.py  13_eval_decoys.py  15_plot_bias_matrix.py  16_align_ad_decoys.py  17_eval_ad_decoys.py  20_extract_egnn_features.py  21_run_phase6_eval.py  22_aggregate_phase6.py  audit_dudez_mol2.py  diag_01_pocket_goldilocks_collapse.py  diag_02_pocket_permutation_importance.py  diag_03_pocket_shortcut_report.py  extract_flowr_features.py  phase3_compare_targets.py  phase4_validate_optimized.py  phase4_worker_sweep.sh  plot_01_featurizer_accuracy_overview.py  plot_01v_featurizer_accuracy_violin.py  plot_02_diagnostic_findings.py  run_full_extraction.sh  run_full_sweep.sh
src/: conformer_gen.py  data_loading.py  evaluation.py  gpu_utils.py  pocket_utils.py  training.py  utils.py
src/featurizers/: base.py  distances.py  grim.py  plec.py  plif.py  pocket.py
src/models/: egnn.py
src/plotting/: palette.py
tests/: test_config.py  test_conformer_gen.py  test_data_loading.py  test_evaluation.py  test_featurizers.py  test_gpu_utils.py  test_groupkfold.py  test_pocket_utils.py  test_training.py  test_utils.py
